import "google/protobuf/empty.proto";
syntax = "proto3";

package hero;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}

service HeroService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc FindMany (stream HeroById) returns (stream Hero);
}